# GD32-Clion-Demo

./: CMakeLists.txt  RDME.md  README.md  board.cfg  gd32f10x_flash.ld
Core/Src/: main.c
Drivers/CMSIS/: gd32f10x.h
UserApp/Inc/: main.h
UserApp/LEDControl/: LEDCtrl.cpp  LEDCtrl.hpp
UserApp/MainApp/: MainApp.cpp  MainApp.h
UserApp/Src/: main.c
